--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -15,3 +15,7 @@ macro(add_google_benchmark TEST_NAME TEST_ARGS)
     add_executable(${TEST_NAME} ${TEST_ARGS})
     target_link_libraries(${TEST_NAME} benchmark::benchmark lab3)
 endmacro()
+
+add_google_benchmark(sort_benchmark Sort.cpp)
+add_google_benchmark(quick_sort_benchmark QuickSort.cpp)
+add_google_benchmark(insertion_sort_benchmark InsertionSort.cpp)
