Generalize benchmarks even more

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,6 +16,4 @@ macro(add_google_benchmark TEST_NAME TEST_ARGS)
     target_link_libraries(${TEST_NAME} benchmark::benchmark lab3)
 endmacro()
 
-add_google_benchmark(sort_benchmark Sort.cpp)
-add_google_benchmark(quick_sort_benchmark QuickSort.cpp)
-add_google_benchmark(insertion_sort_benchmark InsertionSort.cpp)
+add_google_benchmark(worst_case_benchmark WorstCase.cpp)
